# GAP

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
GAP/: urls.py  wsgi.py
GAP/settings/: development.py
GAP/templates/: base.html
home/templates/home/: home_page.html  login.html
static/: package-lock.67478548b8c2.json  package.1cf84a4d0f31.json  staticfiles.json
